<resources>
    <string name="app_name">3gram</string>
    <string name="about_info">High level experience in web design and development knowledge, producing quality work.</string>
    <string name="follow_us">Follow us</string>
    <string name="image_description">image</string>
    <string name="type_your_comment_here">Type your comment here</string>
    <string name="send">Send</string>
    <string name="album_item_place_title">Make up Masterclass w/ the best in the industry</string>
    <string name="_14_min">14 min</string>
    <string name="ec">EC</string>
    <string name="albums">Albums</string>
    <string name="comments">Comments</string>
    <string name="about">About</string>
    <string name="please_wait_2_3_seconds">Please wait 2-3 seconds</string>
</resources>