<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tashuseyin.case_3gram.presentation.about.AboutFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/card_color"
        android:elevation="5dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_about_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/roboto"
                android:text="@string/about_info"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/about_logo"
                app:layout_constraintTop_toBottomOf="@+id/about_logo" />

            <TextView
                android:id="@+id/follow_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/roboto"
                android:text="@string/follow_us"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/about_text" />

            <ImageView
                android:id="@+id/facebook_logo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_facebook_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gitlab_logo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/follow_us" />

            <ImageView
                android:id="@+id/gitlab_logo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_gitlab_logo"
                android:contentDescription="@string/image_description"
                app:layout_constraintBottom_toBottomOf="@+id/facebook_logo"
                app:layout_constraintEnd_toStartOf="@+id/github_logo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/facebook_logo"
                app:layout_constraintTop_toTopOf="@+id/facebook_logo" />

            <ImageView
                android:id="@+id/github_logo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_github_logo"
                android:contentDescription="@string/image_description"
                app:layout_constraintBottom_toBottomOf="@+id/gitlab_logo"
                app:layout_constraintEnd_toStartOf="@+id/message_logo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/gitlab_logo"
                app:layout_constraintTop_toTopOf="@+id/gitlab_logo" />

            <ImageView
                android:id="@+id/message_logo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_message_logo"
                android:contentDescription="@string/image_description"
                app:layout_constraintBottom_toBottomOf="@+id/github_logo"
                app:layout_constraintEnd_toStartOf="@+id/instagram_logo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/github_logo"
                app:layout_constraintTop_toTopOf="@+id/github_logo" />

            <ImageView
                android:id="@+id/instagram_logo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_instagram_logo"
                android:contentDescription="@string/image_description"
                app:layout_constraintBottom_toBottomOf="@+id/message_logo"
                app:layout_constraintEnd_toStartOf="@+id/figma_logo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/message_logo"
                app:layout_constraintTop_toTopOf="@+id/message_logo" />

            <ImageView
                android:id="@+id/figma_logo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_social"
                android:contentDescription="@string/image_description"
                app:layout_constraintBottom_toBottomOf="@+id/instagram_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/instagram_logo"
                app:layout_constraintTop_toTopOf="@+id/instagram_logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>